# ff

./: .gitmodules  AUTHORS  README.md
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp/cmake/: build.cmake  clangformat.cmake
cpp/cmake/modules/: FindTensorFlow.cmake
cpp/config/: cameras.toml  config.toml  models.toml
cpp/microclassifiers/: mc.pb
cpp/src/: CMakeLists.txt
cpp/src/ff/: README.md  deduplicator.cpp  deduplicator.h  ed.cpp  ed.h  filter.cpp  filter.h  filterforward.cpp  frame_server.py  fv_gen.cpp  fv_gen.h  imagematch.cpp  imagematch.h
cpp/src/nnbench/: nnbench.cpp  nnbench_app.cpp
cpp/src/utils/: frame_selector.cpp  frame_selector.h  frame_selector_app.cpp  nnbench.cpp  nnbench.h  nnbench_app.cpp  opencv_mp4_writer.cpp  opencv_mp4_writer.h
scripts/: .gitignore  README.md
scripts/accuracy_bandwidth/: .gitignore  classifiers.py  run_experiment.sh
scripts/accuracy_bandwidth/labeler/: .gitignore  Makefile  README.md  labeler.cpp
scripts/accuracy_bandwidth/labeler/labels/new_jh_3_pedestrians/: labels-15fps.h5
scripts/accuracy_bandwidth/labeler/labels/noscope-jackson/: readme
scripts/accuracy_bandwidth/labeler/labels/vimba_iii_3_2018-3-21_15/: video_link.txt
scripts/accuracy_bandwidth/labeler/labels/vimba_iii_3_2018-3-21_16/: video_link.txt
scripts/accuracy_bandwidth/labeler/scripts/: fix.py  labels_to_txt.py  parse_labels_files.py  sample_labels.py  split_labels.py
scripts/accuracy_bandwidth/post_process/: README.md  analyze_one_point.sh  event_metrics.py  extract_frames.py  filterforward.py  parse_one_result.py  quick_parse_and_graph.py
scripts/accuracy_bandwidth/setup/: caffe_paths.sh  export_mobilenet_tf.py  export_mobilenet_tf.sh  export_models.py  freeze_graph.py  gen_models.sh
scripts/accuracy_bandwidth/setup/networks_exp_utils/: __init__.py  file_util.py  model_util.py
scripts/e2e/: ff.sh  nnbench.sh  run_all.sh
scripts/e2e/configs/: readme.txt
scripts/e2e/configs/ff_confs/: edit_ff_confs.sh  super-replace.sh
scripts/e2e/configs/ff_confs/1x1_objdet/: config-1.csv  config-10.csv  config-15.csv  config-2.csv  config-20.csv  config-25.csv  config-3.csv  config-30.csv  config-35.csv  config-4.csv  config-40.csv  config-45.csv  config-5.csv  config-50.csv  config-55.csv  config-6.csv  config-60.csv  config-7.csv  config-8.csv  config-9.csv
scripts/e2e/configs/ff_confs/spatial_crop/: config-1.csv  config-10.csv  config-15.csv  config-2.csv  config-20.csv  config-25.csv  config-3.csv  config-30.csv  config-35.csv  config-4.csv  (+10 more)
scripts/e2e/configs/models/: mobilenet.prototxt
scripts/e2e/configs/saf_config/: cameras.toml  config.toml  models.toml
scripts/misc/: encode_and_extract.sh  gen_features.py  get_madds.py  vid_to_imgs.py
(+33 files in other folders)
